--- a/style.css
+++ b/style.css
@@ -149,3 +149,10 @@ body.dark-mode footer {
     box-shadow: 0xp 0xp 30xp rgba(227, 228, 237, 0.37);
     border:2px solid rgba(0, 0, 0, 0.18)
 } 
+.map-container {
+    width: 100%;
+    height: 450px;
+    margin-top: 20px;
+    border-radius: 10px;
+    overflow: hidden;
+}
