--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ h2, h3 {
 
 .mall img, .hotel img, .mosques img, .entertainment img, .eat img, .healthcare img {
     width: 100%;
-    height: auto;
+    height: 200px;
     border-radius: 5px;
 }
 
