--- a/style.css
+++ b/style.css
@@ -165,13 +165,7 @@ body.dark-mode footer {
     box-shadow: 0xp 0xp 30xp rgba(227, 228, 237, 0.37);
     border:2px solid rgba(0, 0, 0, 0.18)
 } 
-.map-container {
-    width: 100%;
-    height: 450px;
-    margin-top: 20px;
-    border-radius: 10px;
-    overflow: hidden;
-}
+
 
 .text-image-container {
     display: flex;
@@ -204,4 +198,10 @@ hr {
     background-color: #ccc; /* Line color */
     height: 100px; /* Set the height of the line */
     margin: 0 20px; /* Space around the line */
+}
+#mapid {
+    height: 400px;
+    width: 100%;
+    border: 5px solid #007BFF; /* Blue border */
+    border-radius: 10px; /* Optional rounded corners */
 }
