--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 body.dark-mode {
     background-color: #859098;
-    color: #ffffff;
+    color: #303030;
 }
 
 /* Header */
@@ -24,6 +24,8 @@ header {
     background-color: rgba(0, 0, 0, 0.4);
     color: #fff;
     padding: 15px 10px; /* Less padding */
+    position: relative;
+    
     text-align: center;
     border-bottom: 2px solid rgba(255, 255, 255, 0.3);
     transition: background-color 0.3s ease, padding 0.3s ease;
@@ -164,7 +166,11 @@ body.dark-mode header {
 }
 
 body.dark-mode nav ul li a {
-    color: #fff;
+    color: #ababab;
+}
+
+body.dark-mode nav {
+    background-color: #333;
 }
 
 body.dark-mode footer {
