--- a/style.css
+++ b/style.css
@@ -18,10 +18,8 @@ body.dark-mode {
 /* Header */
 header {
     height: 80px; /* Smaller header */
-    background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Al_jubail.jpg/800px-Al_jubail.jpg') no-repeat center center;
-    background-size: cover;
     backdrop-filter: blur(8px);
-    background-color: rgba(48, 47, 47, 0.4);
+    background-color: #333;
     color: #fff;
     padding: 15px 10px; /* Less padding */
     position: relative;
