--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ body.dark-mode footer {
 
 /* Footer */
 footer {
-    background-color: #333;
+    background-color: #3498db;
     color: #fff;
     text-align: center;
     padding: 35px 20px;
